# search-summarization-agent

./: .gitignore  pyproject.toml
src/data/: nke-10k-2023.docx
src/search_summarization_agent/: __init__.py  agent.py
